Create the authentication controller

--- a/book-network/src/main/resources/application.yml
+++ b/book-network/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     multipart:
       max-file-size: 50MB
 springdoc:
-  default-produces-media-type:
+  default-produces-media-type: application/json
 
 
 server:
