--- a/book-network/src/main/resources/application-dev.yml
+++ b/book-network/src/main/resources/application-dev.yml
@@ -1,18 +1,18 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/book_social_network
-    username: username
-    password: password
+    username: phong
+    password: phong
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql:
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
       database: postgresql
-      database-platform: org.hibernate.dialect.PostgreSLDialect
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
   mail:
     host: localhost
     port: 1025
@@ -37,3 +37,5 @@ application:
   mailing:
     frontend:
       activation-url : http://localhost:42000/activate-account
+server:
+  port: 8088
